# srt

./: .gitignore  .lock-waf_linux_build  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  build_current  resolve.json  waf  wscript
.github/workflows/: clang-format.yml  integration_test.yml  linux_cmake.yml  linux_mkspecs.yml  macos_cmake.yml  macos_mkspecs.yml  nodebug.yml  valgrind.yml  windows_cmake.yml  windows_mkspecs.yml
.waf3-2.0.22-e6b44ba14c1947e7b6e49f0d693672c2/waflib/extras/: clang_compilation_database.py  semver.py
.waf3-2.0.22-e6b44ba14c1947e7b6e49f0d693672c2/waflib/extras/archive/: __init__.py  compat.py
.waf3-2.0.22-e6b44ba14c1947e7b6e49f0d693672c2/waflib/extras/wurf/: archive_resolver.py  check_lock_cache_resolver.py  check_optional_resolver.py  compat.py  config_file.py  configuration.py  context_msg_resolver.py  create_symlink_resolver.py  dependency.py  dependency_manager.py  directory.py  error.py  existing_checkout_resolver.py  existing_tag_resolver.py  git.py  git_checkout_resolver.py  git_resolver.py  git_semver_resolver.py  git_url.py  git_url_parser.py  git_url_rewriter.py  http_resolver.py  list_resolver.py  load_lock_path_resolver.py  lock_cache.py  mandatory_options.py  mandatory_resolver.py  on_active_store_path_resolver.py  on_passive_load_path_resolver.py  options.py  path_resolver.py  post_resolve_run.py  registry.py  rewrite.py  semver_selector.py  store_lock_path_resolver.py  store_lock_version_resolver.py  symlink.py  tag_database.py  try_resolver.py  (+10 more)
cmake/: zig-ranlib.sh  zig.cmake
cmake_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
examples/: hello_asio.cpp  wscript_build
resolve_symlinks/: asio-source  srt-source  waf-tools
test/src/: test_srt.cpp  tests.cpp
